.vscode/tasks.json: git commands

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,6 +36,16 @@
         },
 
 
+        // misc
+        {
+            "label":            "git push github master",
+            "command":          "git push github master",
+        },
+        {
+            "label":            "git commit --amend",
+            "command":          "git commit --amend",
+        },
+
         { "label": "open repository",   "command": "start \"\" https://github.com/MaulingMonkey/winerr" },
         { "label": "open issues",       "command": "start \"\" https://github.com/MaulingMonkey/winerr/issues" },
         { "label": "open wiki",         "command": "start \"\" https://github.com/MaulingMonkey/winerr/wiki" },
