--- a/crates/winerr/Cargo.toml
+++ b/crates/winerr/Cargo.toml
@@ -1,4 +1,5 @@
 # https://doc.rust-lang.org/cargo/reference/manifest.html
+# https://crates.io/category_slugs
 
 [package]
 name                                    = "winerr"
@@ -6,7 +7,12 @@ description                             = "windows error codes"
 version                                 = "0.0.0-git-lib"
 authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
 edition                                 = "2021"
+repository                              = "https://github.com/MaulingMonkey/winerr"
+documentation                           = "https://docs.rs/winerr"
 license                                 = "Apache-2.0 OR MIT"
+readme                                  = "Readme.md"
+keywords                                = ["win32", "error", "hresult", "natvis"]
+categories                              = ["os::windows-apis"]
 
 [package.metadata.docs.rs]
 all-features                            = true
