--- a/crates/winresult/Cargo.toml
+++ b/crates/winresult/Cargo.toml
@@ -4,7 +4,7 @@
 [package]
 name                                    = "winresult"
 description                             = "windows result codes"
-version                                 = "0.1.2"
+version                                 = "0.1.3" # DON'T FORGET TO UPDATE CHANGELOG
 authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
 edition                                 = "2021"
 repository                              = "https://github.com/MaulingMonkey/winresult"
@@ -23,4 +23,4 @@ path                                    = "src/_lib.rs"
 
 [dependencies]
 winresult-types.path                    = "../winresult-types"
-winresult-types.version                 = "0.1.2"
+winresult-types.version                 = "0.1.3"
